--- a/poker-server/package.json
+++ b/poker-server/package.json
@@ -1,17 +1,22 @@
 {
   "name": "poker-server",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Advanced multiplayer poker server with modular architecture",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node test-settings.js && node test-showdown.js",
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "new": "nodemon server.js"
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "poker",
+    "server",
+    "socketio",
+    "multiplayer",
+    "texas-holdem"
+  ],
+  "author": "Your Name",
+  "license": "MIT",
   "type": "commonjs",
   "dependencies": {
     "cors": "^2.8.5",
